--- a/geomemo/app/views/notes/show.html.erb
+++ b/geomemo/app/views/notes/show.html.erb
@@ -1,3 +1,14 @@
+
 <h1><%= @note.title %></h1>
 
+<h5>Notebook: <%= Notebook.find(@note.notebook_id).name %> || Location: <%= Location.find(@note.location_id).name %></h5>
+
 <p><%= @note.content %></p>
+
+
+
+
+<div>
+<%= button_to 'Edit Note', edit_note_path, :method => 'get' %>
+<%= button_to 'Delete Note', note_path(@note), :method => 'delete' %>
+</div>
