--- a/geomemo/app/views/locations/index.html.erb
+++ b/geomemo/app/views/locations/index.html.erb
@@ -1,10 +1,10 @@
 <h1> Locations </h1>
 <%= button_to "New Location", new_location_path, :method => "get" %> <br>
 
-<% @locations.each do |location| %> 
-   <p><%= link_to location.name, location_path(location) %> <%= button_to "Edit", edit_location_path(location), method: "get" %> 
-   <%= button_to "Delete", location_path(location), method: "delete" %> 
+<% @locations.each do |location| %>
+   <p><%= link_to location.name, location_path(location) %> <%= button_to "Edit", edit_location_path(location), method: "get" %>
+     <% if location.id != Location.first.id %>
+      <%= button_to "Delete", location_path(location), method: "delete" %>
+    <% end %>
  </p>
 <% end %>
-
-
