--- a/geomemo/app/views/notebooks/index.html.erb
+++ b/geomemo/app/views/notebooks/index.html.erb
@@ -1,3 +1,3 @@
 <% @notebooks.each do |notebook| %>
-<%= button_to notebook.name, notebook_path(notebook), :method => "get" %>
+<%= link_to notebook.name, notebook_path(notebook) %>
 <% end %>
