--- a/geomemo/app/views/layouts/application.html.erb
+++ b/geomemo/app/views/layouts/application.html.erb
@@ -2,13 +2,39 @@
 <html>
   <head>
     <title>Geomemo</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+    <header class="header">
+  <div class="container">
+    <nav class="level">
+      <div class="level-left">
+        <div class="level-item">
+          GeoMemo
+        </div>
+      </div>
+      <div class="level-right">
+        <p class="level-item">
+          
+        </p>
+      </div>
+    </nav>
+  </div>
+</header>
+<section class="section">
+  <div class="container">
     <%= yield %>
+  </div>
+</section>
+<footer class="footer">
+  <div class="container">
+    Copyright © 2019 MyApp. All rights reserved.
+  </div>
+</footer>
   </body>
 </html>
