--- a/geomemo/app/views/layouts/application.html.erb
+++ b/geomemo/app/views/layouts/application.html.erb
@@ -15,12 +15,12 @@
     <nav class="level">
       <div class="level-left">
         <div class="level-item">
-          GeoMemo
+          <h2>GeoMemo</h2>
         </div>
       </div>
       <div class="level-right">
         <p class="level-item">
-          
+
         </p>
       </div>
     </nav>
@@ -33,7 +33,7 @@
 </section>
 <footer class="footer">
   <div class="container">
-    Copyright © 2019 MyApp. All rights reserved.
+    Copyright © 2020 GeoMemo. All rights reserved.
   </div>
 </footer>
   </body>
