--- a/geomemo/app/views/locations/index.html.erb
+++ b/geomemo/app/views/locations/index.html.erb
@@ -1,4 +1,6 @@
-<h1> Locations </h1>
+<div class="locations">
+  <h1> Locations </h1>
+</div>
 <%= button_to "New Location", new_location_path, :method => "get" %> <br>
 
 <% @locations.each do |location| %>
