added locations and notes links to header

--- a/geomemo/app/views/layouts/application.html.erb
+++ b/geomemo/app/views/layouts/application.html.erb
@@ -18,9 +18,14 @@
           <h2>GeoMemo</h2>
         </div>
       </div>
+      <div class="level-center">
+        <p class="level-item">
+          <%= link_to "All Notes", notes_path %>
+        </p>
+      </div>
       <div class="level-right">
         <p class="level-item">
-
+          <%= link_to "Locations", locations_path %>
         </p>
       </div>
     </nav>
