--- a/geomemo/app/views/layouts/application.html.erb
+++ b/geomemo/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <nav class="level">
       <div class="level-left">
         <div class="level-item">
-          <h2>GeoMemo</h2>
+          <%= link_to "GeoMemo", root_path %>
         </div>
       </div>
       <div class="level-center">
@@ -28,7 +28,7 @@
       </div>
       <div class="level-right">
         <p class="level-item">
-          <%= link_to "Locations", locations_path %>
+          <%= link_to "Notebooks", notebooks_path %>
         </p>
       </div>
     </nav>
