--- a/geomemo/app/assets/stylesheets/_layout.scss
+++ b/geomemo/app/assets/stylesheets/_layout.scss
@@ -1,19 +1,26 @@
+html {
+  height: -webkit-fill-available;
+}
 
 h1 {
   font-size: 100px;
   color: white;
   text-align: center;
 }
-.level .level-left .level-item{
-  text-align: center;
+
+.wrapper {
+    min-height: 100%;
+    margin: -240px auto 0;
 }
+
+.content {
+  padding-top: 240px;
+}
+
+
 
 body {
   font-family: Chalkduster, fantasy;
-  display:flex;
-  flex-direction:column;
-  justify-content:space-between;
-  height:100vh;
   background-image: linear-gradient(to right top, #069d4a, #0da66c, #2bae89, #4bb6a1, #6dbcb4, #52b8bc, #33b3c6, #00add1, #0097e6, #007df9, #005afe, #0f15e9);
 }
 
@@ -49,19 +56,30 @@ body {
   background-image: url("/images/laptop.jpg")
 }
 
+.body-laptop, .body-car, .body-bank, .body-backpocket, .body-school, .body-bedsidetable, .body-uncategorized {
+
+}
+
 .footer{
-  border-radius: -50px;
+  // margin-bottom: 2rem 1.5rem;
+  text-align: center;
+  margin: 300px 30px 30px 30px;
 }
 .header, .footer{
   font-family: monospace;
   background-color: #FCFAF4;
   // border-radius: 50px;
+  // border-bottom: 50px;
 
 }
 .header {
   // background-color:white;
-  padding:1rem 1.5rem;
-    border-radius: 50px;
+  padding-bottom: 2rem 1.5rem;
+  padding-left: 2rem 2rem;
+  padding-right: 2rem 1rem;
+  padding-top: 2rem 1.5rem;
+  margin: 0px 30px 30px 30px;
+  border-radius: 50px;
 }
 .section {
   display:flex;
