changes background color to black, bulma-ed new location button on location index

--- a/geomemo/app/assets/stylesheets/_layout.scss
+++ b/geomemo/app/assets/stylesheets/_layout.scss
@@ -21,7 +21,7 @@ h1 {
 
 body {
   font-family: Chalkduster, fantasy;
-  background-image: linear-gradient(to right top, #069d4a, #0da66c, #2bae89, #4bb6a1, #6dbcb4, #52b8bc, #33b3c6, #00add1, #0097e6, #007df9, #005afe, #0f15e9);
+  background-image: linear-gradient(to right, #000000, #434343);
 }
 
 .body-kitchen {
