--- a/geomemo/app/views/locations/index.html.erb
+++ b/geomemo/app/views/locations/index.html.erb
@@ -6,7 +6,7 @@
       <h1 class="title is-1"> Locations </h1> 
     </div>
     <div class="subtitle"> 
-      <%= button_to "New Location", new_location_path, :method => "get" %>  </div>
+      <%= button_to "New Location", new_location_path, :method => "get", class: "button is-dark" %>  </div>
     </div>
 </section>
 
@@ -39,14 +39,11 @@
                   
                   <p class="control">
                   <a href= "<%= location_path(location) %>" >
-                    <%= button_to "Delete", location_path(location), method: "delete", class: "button is-danger" %>
+                    <%= button_to "Delete", location_path(location), method: "delete", class: "button is-dark" %>
                   </p>
                 </div>
 
                 
-                <!-- <a href= '<%= link_to "Delete", locations_path(location), method: "delete" %>'> <button class="button is-light">Delete</button> </a> -->
-
-                    <!-- <%= button_to "Delete", location_path(location), method: "delete" %> -->
                 <% end %>  
            </div>
       <% end %>
