--- a/geomemo/app/views/locations/index.html.erb
+++ b/geomemo/app/views/locations/index.html.erb
@@ -3,9 +3,9 @@
 <section class="hero">
   <div class="hero-body">
     <div class="container">
-      <h1 class="title is-1"> Locations </h1> 
+      <h1 class="title is-1" style="color: white;"> Locations </h1> 
     </div>
-    <div class="subtitle"> 
+    <div class="subtitle">
       <%= button_to "New Location", new_location_path, :method => "get", class: "button is-dark" %>  </div>
     </div>
 </section>
@@ -18,7 +18,7 @@
   <div class="columns is-multiline">
       <% @locations.map do |location| %>
 
-        
+
 
            <div class="column is-one-third">
             <div class="thumbnail">
@@ -26,8 +26,8 @@
             </div>
                 <%= link_to location.name, location_path(location) %> <br>
 
-     
-                <% if location.id != Location.first.id %> 
+
+                <% if location.id != Location.first.id %>
 
                 <div class="field is-grouped">
                   <p class="control">
@@ -36,15 +36,15 @@
                       Edit
                     </button>
                   </p>
-                  
+
                   <p class="control">
                   <a href= "<%= location_path(location) %>" >
                     <%= button_to "Delete", location_path(location), method: "delete", class: "button is-dark" %>
                   </p>
                 </div>
 
-                
-                <% end %>  
+
+                <% end %>
            </div>
       <% end %>
   </div>
