--- a/geomemo/app/views/locations/index.html.erb
+++ b/geomemo/app/views/locations/index.html.erb
@@ -6,7 +6,14 @@
       <h1 class="title is-1"> Locations </h1> 
     </div>
     <div class="subtitle"> 
-      <%= button_to "New Location", new_location_path, :method => "get", class: "button is-dark" %>  </div>
+    <% if logged_in? %>
+    <h1>You are Logged In, <%= current_user.username %></h1>
+    <%end%>
+      <%= button_to "New Location", new_location_path, :method => "get", class: "button is-dark" %>  
+      <%= button_to "Sign-up", new_user_path, :method => "get", class: "button is-dark" %>
+      <%= button_to "Log-in", '/login', :method => "get", class: "button is-dark" %>
+      </div>
+
     </div>
 </section>
 
