stying and images

--- a/geomemo/app/assets/stylesheets/_layout.scss
+++ b/geomemo/app/assets/stylesheets/_layout.scss
@@ -23,47 +23,60 @@ body {
   background-image: linear-gradient(to right, #000000, #434343);
 }
 
-// .body-kitchen {
-//   background-image: url("/images/kitchen.jpg")
-// }
-//
-// .body-uncategorized {
-//   background-image: url("/images/uncategorized.jpg")
-// }
-//
-// .body-bedsidetable {
-//   background-image: url("/images/bedside-table.jpg")
-// }
-//
-// .body-schoolbag {
-//   background-image: url("/images/school.jpg")
-// }
-//
-// .body-backpocket {
-//   background-image: url("/images/backpocket.jpg")
-// }
-//
-// .body-bank {
-//   background-image: url("/images/bank.jpg")
-// }
-//
-// .body-car {
-//   background-image: url("/images/car.jpg")
-// }
-//
-// .body-laptop {
-//   background-image: url("/images/laptop.jpg")
-// }
+.text {
+  background-color: white;
+  opacity: 40%;
+}
+
+.body-kitchen {
+  background-image: url("/images/8_kitchen_3.png");
+  background-size: cover;
+
+
+}
+
+.body-uncategorized {
+  background-image: url("/images/Selected Photos/1_uncategorized_6.png");
+  background-size: cover;
+  background-color: black;
+}
+
+.body-bedsidetable {
+  background-image: url("/images/bedside-table.jpg")
+}
+
+.body-schoolbag {
+  background-image: url("/images/school.jpg")
+}
+
+.body-backpocket {
+  background-image: url("/images/backpocket.jpg")
+}
+
+.body-bank {
+  background-image: url("/images/bank.jpg")
+}
+
+.body-car {
+  background-image: url("/images/car.jpg")
+}
+
+.body-laptop {
+  background-image: url("/images/laptop.jpg")
+}
 
 
 .footer{
   // margin-bottom: 2rem 1.5rem;
+  background-color: black;
   text-align: center;
   margin: 300px 30px 30px 30px;
+  opacity: 50%;
+  color: white;
 }
 .header, .footer{
   font-family: monospace;
-  background-color: #FCFAF4;
+
   // border-radius: 50px;
   // border-bottom: 50px;
 
@@ -76,6 +89,7 @@ body {
   padding-top: 2rem 1.5rem;
   margin: 0px 30px 30px 30px;
   border-radius: 50px;
+  background-color: #FCFAF4;
 }
 .section {
   display:flex;
