--- a/geomemo/app/views/layouts/application.html.erb
+++ b/geomemo/app/views/layouts/application.html.erb
@@ -47,7 +47,7 @@
 </div>
 <!-- end wrapper --></div>
 <footer class="footer">
-    Copyright © 2020 GeoMemo. All rights reserved.
+    <p style="opacity: 100%;">Copyright © 2020 GeoMemo. All rights reserved.</p>
 </footer>
   </body>
 </html>
