--- a/geomemo/app/views/locations/show.html.erb
+++ b/geomemo/app/views/locations/show.html.erb
@@ -12,5 +12,5 @@
     <%= link_to note.title, note_path(note) %>
   <% end  %>
 <% else %>
-  <%= "You don't have any notes in this location." %>
+  <p class="text"><%= "You don't have any notes in this location." %></p>
 <% end  %>
