--- a/geomemo/app/views/locations/show.html.erb
+++ b/geomemo/app/views/locations/show.html.erb
@@ -1,5 +1,5 @@
 <% if action_name === "show" %>
-  <body class="body-<%= @location.name.downcase.split(' ').join %> ">
+  <body class="body-<%= @location.name.split(' ').join.downcase %> ">
 <% else %>
   <body>
 <% end %>
